@@ -6,10 +6,10 @@ Tâches libres :
 	  accessible en écriture. [->Achraf ?]
 
 Tâches de Maximilien :
-        - fonction pour chiffrer un texte.
-        - fonction pour déchiffrer un texte.
-        - fonction pour signer un texte.
-        - fonction pour tester la signature d'un texte.
+        - fonction pour chiffrer un texte. (finir)
+        - fonction pour déchiffrer un texte. (finir)
+        - fonction pour signer un texte. (finir)
+        - fonction pour tester la signature d'un texte. (finir)
 
 
 Tâches d'Achraf :
